--- a/certificates/style.css
+++ b/certificates/style.css
@@ -1,199 +1,34 @@
 body{
-  display:flex;
-  flex-direction: row;
+margin:0;
+padding:0;
+overflow-x:hidden;
+display:flex;
+flex-direction: column;
 }
 
 img{
-  display:flex;
-  flex-direction: column;
-  margin-top:5%;
-  margin-left: 8%;
+display:flex;
+flex-direction: column;
+width:50%;
+margin-top:5%;
+margin-left: 5%;
 }
 
-#syllabus{
-  position: relative;
-  font-family: monospace;
-  font-size: 25px;
-  margin-left:13%;
-  margin-top:3%;
-  padding:18%;
+.syllabus{
+position: relative;
+font-family: monospace;
+font-size: 25px;
+margin:auto;
 }
 
-#js_syllabus, #js_ws_syllabus, #d_ws_syllabus, #cd_line_syllabus, #responsive_syllabus {
-  position: absolute;
-  margin-left: -50%;
-}
-
-#js_syllabus{
-  margin-top:-45%;
-}
-
-#js_ws_syllabus{
-  margin-top: 65%;
-}
-
-#d_ws_syllabus{
-  margin-top: 160%;
-}
-
-#cd_line_syllabus{
-  margin-top: 250%;
-}
-
-#responsive_syllabus{
-  margin-top:350%;
+.certificate{
+display:flex;
+flex-direction: row;
+justify-content: space-between;
 }
 
 li{
-  line-height: 3rem;
-}
-
-@media screen and (min-width:320px) and (max-width:500px){
-
-  img{
-    width:180%;
-    margin-top:80%;
-  }
-  #cert_1{
-    margin-top:0%;
-  }
-
-  #syllabus{
-    font-size: 18px;
-    margin-left:13%;
-    margin-top:50%;
-    padding:18%;
-  }
-
-  li{
-    line-height: 1rem;
-  }
- 
-  #js_syllabus{
-    margin-top:20%;
-    margin-left:-200%;
-  }
-
-  #js_ws_syllabus{
-    margin-top: 330%;
-    margin-left:-200%;
-  }
-  
-  #d_ws_syllabus{
-    margin-top: 650%;
-    margin-left:-200%;
-  }
-  
-  #cd_line_syllabus{
-    margin-top: 950%;
-    margin-left:-200%;
-  }
-
-  #responsive_syllabus{
-    margin-top: 1260%;
-    margin-left:-200%;
-  }
-}
-
-@media screen and (min-width:1000px) and (max-width:1100px){
- 
-#js_syllabus{
-    margin-top:-50%;
-  }
-  
-  #js_ws_syllabus{
-    margin-top:80%;
-  }
-
-  #d_ws_syllabus{
-  margin-top: 220%;
-  }
-
-  #cd_line_syllabus{
-    margin-top: 350%;
-  }
-
-  #responsive_syllabus{
-    margin-top: 500%;
-  }
-}
-
-@media screen and (min-width:1200px) and (max-width:1400px),(min-width:1450px) and (max-width:1500px) {
-
-  img{
-    width:80%;
-  }
-
-  #syllabus{
-    margin-left:0%;
-  }
-
-#js_syllabus{
-    margin-top:-50%;
-  }
-  
-  #js_ws_syllabus{
-    margin-top:40%;
-  }
-
-  #d_ws_syllabus{
-  margin-top: 130%;
-  }
-
-  #cd_line_syllabus{
-    margin-top: 220%;
-  }
-
-  #responsive_syllabus{
-    margin-top: 320%;
-  }
-
+line-height: 3rem;
 }
 
 
-@media screen and (min-width:1600px) and (max-width:1800px){
-
-  #js_syllabus{
-    margin-top:-50%;
-  }
-  
-  #js_ws_syllabus{
-    margin-top:50%;
-  }
-
-  #d_ws_syllabus{
-  margin-top: 140%;
-  }
-
-  #cd_line_syllabus{
-    margin-top: 210%;
-  }
-
-  #responsive_syllabus{
-    margin-top: 320%;
-  }
-
-}
-
-@media screen and (min-width:1810px) and (max-width:2000px){
-  #js_syllabus{
-    margin-top:-50%;
-  }
-  
-  #js_ws_syllabus{
-    margin-top:30%;
-  }
-
-  #d_ws_syllabus{
-  margin-top: 100%;
-  }
-
-  #cd_line_syllabus{
-    margin-top: 180%;
-  }
-
-  #responsive_syllabus{
-    margin-top: 250%;
-  }
-
-}
