--- a/style.css
+++ b/style.css
@@ -1,47 +1,46 @@
-
 body{
-  margin:0;
-  padding:0;
-  overflow-x:hidden;
+margin:0;
+padding:0;
+overflow-x:hidden;
+font-family: 'Raleway';
+}
+
+.pointer{
+  cursor: pointer; 
 }
 
 h1{
-  font-family: Gill Sans;
-  font-weight: 100;
-  text-align: center;
-  font-size: 55px;
-  margin-top: 5%;
- 
+font-weight: 100;
+text-align: center;
+font-size: 55px;
+margin-top: 5%;
+
 }
 
 .parallax{
-  background: url("https://www.dropbox.com/s/nt5g9qbn5ocrtc2/traintracks1.png?dl=1")
-  no-repeat fixed 100%;
+background: url("/web_dev_pics/traintracks.png")
+no-repeat fixed 100%;
 }
 
 .inner_parallax{
-  padding:30%;
+padding:30%;
 }
 
 h2{
-  position:absolute;
-  font-family: Trebuchet MS;
-  font-weight:400;
-  font-size: 50px;
-  margin-top: -4%;
-  margin-left: 8%;
-  color: white;
+font-weight:100;
+font-size: 50px;
+color: white;  
+width:80%;
+margin:3% auto;
 }
 
 #icons{
-position:absolute;
-width:15%;
-margin-top: 2%;
-margin-left:16%
+width:25%;
+margin:auto;
 }
 
 #twitter,#linkedin{
-  margin-left:10%;
+margin-left:10%;
 }
 
 img{
@@ -49,510 +48,159 @@ width: 100%;
 margin:auto;
 }
 
-h3 {
-  font-family: Gill Sans;
-  font-weight: 100;
-  font-size: 30px;
-  margin-left: 10%;
-  margin-top: 10%;
+
+#body_section{
+font-size:18px;
+width:80%;
+margin:auto;
 }
 
-#websites {
-  margin-left: 10%;
+
+h3,h4 {
+margin-top:10%;
+margin-left:0%;
+font-weight: 100;
+font-size: 30px;
+width:20%;
 }
 
 .divider {
-  border-bottom: 3px solid #888989;
-  max-width: 40%;
-  margin-top: -1%;
-  margin-left: 5%;
+border-bottom: 3px solid #888989;
+max-width: 40%;
 }
 
-#section_1 {
-  position:relative;
-  display: flex; 
-  flex-direction: row;
-  justify-content: space-evenly;
+#section_1, #code_section {
+display: flex; 
+flex-direction: row;
+justify-content:space-evenly;
 }
 
 .website_image{
-  position:absolute;
-  margin-top: 3%;
-  margin-left:-52%;
-  width: 25%;
+margin-top:7%;
+width:35%;
 }
 
-.website_image:hover{
-  width:28%;
+.project_button{
+position:absolute;
+font-family:'Raleway';
+font-size: 18px;
+background-color: rgb(103, 116, 165);
+color:white;
+border: 1px solid white;
+height:7vh;
+width: 10%;
+margin:23% 0% 0% -58%;
+}
+
+#github_nft{
+position:absolute;
+color: black;
+margin: 24% 0% 0% -22%;
 }
 
 #website_1_p {
-  position: absolute;
-  font-family: Trebuchet MS;
-  font-size: 20px;
-  padding:2%;
-  width: 50%;
-  margin-left:37%;
-  margin-top:3%;
-  flex:0.52;
+margin-top:6%;
+width:50%;
 }
 
 
-#section_2{
-  position:relative;
-  }
 
-#design{
-  position: relative;
-  padding: 19.5%;
-  width: 20%;
-  margin-left: 40%;
-  margin-top: -42%;
-  margin-bottom: 3%;
-  border: 3px solid white;
-  }
-
-.design-description{
-  font-family: Trebuchet MS;
-  font-size: 20px;
+#education{
+margin-top:20%;
 }
 
-#design_heading{
-  font-family: Gill Sans;
-  font-weight: 100;
-  font-size: 30px;
-  margin-top: -80%;
+h4{
+font-size:25px;
 }
 
-#works{
- display:flex;
- flex-direction: row;
- position: absolute;
- margin-left: -23%;
- margin-top: 22%;
- 
+#award{
+position:absolute;
+margin: 1% 0% 0% -38%;
+color:white;
+}
+
+#certificate_button{
+font-family:'Raleway';
+font-size: 25px;
+height:35vh;
+width:18%;
+background-color: rgb(103, 116, 165);
+color:white;
+border: 1px solid black;
+}
+
+
+#progress{
+width: 50%;
+}
+
+#design_next, #code_next{
+margin: auto;
+width:90%;
+}
+
+.progress_title{
+color:rgb(103, 116, 165);
+}
+
+
+
+#design_section{
+display:flex;
+flex-direction:row;
+justify-content: space-evenly;
+border: 3px solid white;
 }
 
 #f_a_divider {
-  border-bottom: 1px solid #888989;
-  max-width: 21%;
-  margin-top: -2.5%;
-}
-
-li{
-  line-height: 2rem;
-}
-#f_a_list{
-  margin-left: -5%;
+border-bottom: 1px solid #888989;
+max-width: 35%;
+margin-top: -2.5%;
 }
 
 #b_divider {
-  border-bottom: 1px solid #888989;
-  max-width: 9%;
-  margin-top: -2.5%;
-}
-
-#first_book, #second_book{
-  margin-top: 1%;
-}
-
-#second_book{
-  font-weight: 100;
-}
-
-#next_section{
-  background-color: black;
-  color:white;
-  padding:0.5%;
-  margin-top:3%;
-}
-
-#next{
-  margin-left:3%;
-}
-
-#next_title{
-  font-family: Gill Sans;
-  font-weight: 100;
-  font-size: 30px;
-}
-
-#tools_section{
-  margin-top:-62.5%;
-  margin-left: -15%;
+border-bottom: 1px solid #888989;
+max-width: 12%;
+margin-top: -2.5%;
 }
 
 #t_divider {
-  border-bottom: 1px solid #888989;
-  max-width: 50%;
-  margin-top: -15%;
-}
-
-#t_u_list{
- margin-left: -25%;
-}
-
-#education {
-  margin-top:30%;
-  margin-left: 10%;
-}
-
-#progress {
-  position: relative;
-  padding:9%;
-  width: 5%;
-  margin-top: 3%;
-  margin-left: 10%;
-  margin-bottom: 3%;
-  background-color: black;
-}
-
-.progress_title{
-  font-family: Gill Sans;
-  font-weight: 100;
-  font-size: 30px;
-  color: white;
-  
-}
-
-#progress_p_div{
-  position: absolute;
-  margin-left:-35%;
-  margin-top: 8%;
-}
-
-#currently_completing{
-  margin-top: -48%;
-  }
-
-.progress_p{
-  font-family: monospace;
-  font-size: 20px;
-  color: white;
-  margin-top: -5%;
- 
-}
-
-#certificates{
-  width:18%;
-  padding:6%;
-  margin-top: 3%;
-  margin-left: 10%;
-  background-color: rgb(103, 116, 165);
-  border: 3px solid black;
- 
-}
-
-#certificates_title{
-  color: white;
-  font-family:monospace;
-  font-size: 30px;
-  margin-left: -80%;
-}
-
-
-@media screen and (min-width:320px) and (max-width:500px){
- 
-h1{
-  font-size: 30px;
-}
-
-h2{
-  font-size: 25px;
-  margin: 12% -45%;
-}
-
-.parallax{
-  background: url("https://www.dropbox.com/s/nt5g9qbn5ocrtc2/traintracks1.png?dl=1")
-  no-repeat fixed 55%;
-}
-
-.inner_parallax{
-  padding:70%;
-}
-
-#icons{
-  position:absolute;
-  display:flex;
-  width:15%;
-  margin:25% -35%;
-  }
-
-  #github{
-    margin-left:-30%;
-  }
-
-  #twitter{
-    margin-left:30%;
-  }
-
-  #linkedin{
-    margin-left:100%;
-  }
-
-h3 {
-  font-size: 20px;
-  margin-left: 10%;
-  margin-top: 10%;
-}
-
-.divider{
-  border-bottom: 1px solid #888989;
-  margin-top: -3%;
-  margin-left: 5%;
-}
-
-.heading{
-  margin-left:35%;
-  margin-top:10%;
-}
-
-#section_1{
-  margin-top:10%;
-}
-
-.website_image{
-  position:absolute;
-  width:40%;
-  margin-left:0%;
-  margin-top:-3%;
-}
-
-.website_image:hover{
-  width: 45%;
-}
-
-#website_1_p {
-  font-size: 16px;
-  padding:0%;
-  width: 90%;
-  margin-top:30%;
-  margin-left:0%;
-  text-align: center;
-}
-
-#education{
-margin-top: -30%;
-}
-
-#section_2{
-  margin-top:100%;
-}
-
-#certificates{
-  width:30%;
-  margin-top: 8%;
-  margin-left:18%;
-  height: 120px;
-  border: 1px solid black;
-}
-
-#certificates_title{
-  color: white;
-  font-family:monospace;
-  font-size: 15px;
-  margin-left: -25%;
-}
-
-#progress {
-  padding:12.5%;
-  height: 130px;
-  width: 8%;
-  margin-top: -30%;
-  margin-left: 52%;
-}
-
-.progress_title{
-  font-size: 18px;
-}
-
-#progress_p_div{
-  margin-left:-35%;
-  margin-top: 8%;
-}
-
-#currently_completing{
-  margin-top: -48%;
-  }
-
-.progress_p{
-  font-size: 15px;
-  margin-top: -5%;
-}
-
-#works{
-  flex-direction: column;
-  margin-left: -80%;
-  margin-top: 0%;
- }
-
- .design-description{
-  font-family: Gill Sans;
-  font-size: 16px;
-}
-
-#design_heading{
-  font-size: 30px;
-  margin-top: -120%;
-  margin-left:20%;
-}
-
-#flux_academy{
-  margin-left: 28%;
-}
-
-#books{
-  margin-left: 35%;
-}
-
-#f_a_divider {
-  max-width: 25%;
-  margin-top: -2.5%;
-  margin-left: 28%;
+border-bottom: 1px solid #888989;
+max-width: 50%;
+margin-top: -15%;
 }
 
 li{
-  line-height: 2rem;
+line-height: 2rem;
 }
 
-#f_a_list{
-  margin-left: 0%;
+#f_a_list, #book_list, #t_u_list{
+margin-left: -10%;
 }
 
-#b_divider {
-  max-width: 10%;
-  margin-left:35%;
+#next_section{ 
+margin-bottom:3%;
 }
 
-#first_book{
-  text-align: center;
-  margin-left: -20%;
-  margin-top: 5%;
+#icons_bottom{
+width:20%;
+margin:0% auto;
+margin-bottom: 10%;
 }
 
-#second_book{
-  font-weight: 100;
+#github_bottom, #twitter_bottom, #linkedin_bottom{
+  position:absolute;
+  color:black;
 }
 
-  #design{
-  margin-top:100%
-  }
-
-  #tools{
-    margin-top:-45%;
-    margin-left:43%;
-  }
-  
-  #t_divider {
-    max-width: 9%;
-    margin-top: -3%;
-    margin-left:43%;
-  }
-  
-  #t_u_list{
-   margin-left: 13%;
-
-  }
-  
-  #next_section{
-    margin-top:60%;
-    margin-bottom: 10%;
-    width:85%;
-  }
-  
-  #next{
-    margin-left:0%;
-    
-  }
-  
-  #next_title{
-    font-family: Gill Sans;
-    font-weight: 100;
-    font-size: 30px;
-  }
+#github_bottom{
+  margin-left:0%;
 }
 
-@media screen and (min-width:1450px) and (max-width:1500px), (min-width:1000px) and (max-width:1400px){
-
-  .parallax{
-    background: url("https://www.dropbox.com/s/nt5g9qbn5ocrtc2/traintracks1.png?dl=1")
-    no-repeat fixed 55%;
-  }
-  
-  .inner_parallax{
-    padding:70%;
-  }
-  
-  h2{
-   margin-left: -35%;
-   margin-top:-18%;
-  }
-
-  #icons{
-    width:15%;
-    margin:-10% -25%;
-    }
-
-  .website_image{
-    position:absolute;
-    width:40%;
-    margin-left:-25%;
-    margin-top:5%;
-  }
-
-  #website_1_p {
-    font-size: 20px;
-    width: 40%;
-    margin-top:5%;
-    margin-left:23%;
-    text-align: center;
-  }
-
-  #education{
-    margin-top: 50%;
-   }
-
-   #certificates{
-    width:25%;
-   }
-
-   #certificates_title{
-    margin-left:-40%;
-   }
-   #progress {
-    padding:12%;
-    margin-bottom: 0%;
-  }
-
+#twitter_bottom{
+  margin-left:5%;
 }
 
-@media screen and (min-width:1600px) and (max-width:2000px){
-
-  .parallax{
-    background: url("https://www.dropbox.com/s/nt5g9qbn5ocrtc2/traintracks1.png?dl=1")
-    no-repeat fixed 50%;
-  }
- 
-   .website_image{
-     position:absolute;
-     width:40%;
-     margin-left:-25%;
-     margin-top:5%;
-   }
- 
-   #website_1_p {
-     font-size: 25px;
-     width: 40%;
-     margin-top:5%;
-     margin-left:23%;
-     text-align: center;
-   }
-   
-   h2{
-    margin-left: 10%;
-   }
-
-   #education{
-    margin-top: 50%;
-   }
+#linkedin_bottom{
+  margin-left:10%;
 }
