--- a/styles/web3.css
+++ b/styles/web3.css
@@ -8,43 +8,108 @@ html {
 
 body {
   margin: 0%;
+  overflow: hidden;
   font-family: "Archivo", sans-serif;
   display: grid;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 5% 1fr;
   grid-template-columns: 30% 1fr;
 }
 
+.top-section {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  height: 10.5vh;
+  grid-column: 1 / span2;
+  grid-row-start: 1;
+  background-color: white;
+}
+
+.menu-icon,
+.mobile-menu {
+  display: none;
+}
+
+nav {
+  transform: rotate(270deg);
+  margin-top: -8%;
+  margin-right: 17%;
+  width: 8%;
+  height: 40vh;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav-links {
+  color: rgb(0, 0, 0);
+  margin-top: 50%;
+  transform: rotate(45deg);
+}
+
+.nav-links:hover {
+  color: rgb(118, 118, 118);
+}
+
+#web3 {
+  color: rgb(118, 118, 118);
+}
+
+.socials {
+  display: flex;
+  justify-content: space-evenly;
+  width: 10%;
+  height: 10vh;
+  margin-left: 10%;
+  margin-top: 0%;
+}
+
+.linkedin {
+  width: 25%;
+  margin-top: 0%;
+  cursor: pointer;
+}
+
+.github {
+  margin-top: 20%;
+  margin-left: -10%;
+  cursor: pointer;
+  color: #cd6e29;
+}
+
 .content {
-  grid-area: 1/1/1/1;
-  background-color: rgba(105, 0, 0, 0.868);
-  color: white;
+  grid-area: 2/1/2/1;
+  background-color: rgba(255, 255, 255, 0.81);
+  color: black;
   width: 100%;
   height: 100vh;
 }
 
 h3 {
-  margin: 2%;
-  margin-top: 10%;
+  color: rgba(105, 0, 0, 0.868);
+  margin-left: 4%;
+  margin-top: 30%;
 }
 
 p {
-  margin: 2%;
-  line-height: 20px;
+  padding: 3%;
+  margin-left: 2%;
   font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 1.68px;
 }
 
 button {
   font-size: 15px;
   text-decoration: none;
-  background-color: rgba(105, 0, 0, 0.868);
-  color: white;
-  border: 1px solid white;
-  padding: 2%;
-  margin: 2%;
-  cursor: pointer;
-}
-
-button:hover {
   background-color: white;
   color: rgba(105, 0, 0, 0.868);
+  border: 1px solid rgba(105, 0, 0, 0.868);
+  border-radius: 4px;
+  padding: 2%;
+  margin-left: 4%;
+  width: 40%;
+  cursor: pointer;
 }
