--- a/styles/code.css
+++ b/styles/code.css
@@ -1,12 +1,18 @@
 body {
   margin: 0%;
+  font-family: "Archivo", sans-serif;
+}
+
+.divider{
+width:100%;
+height:0.1vh;
+background-color: #767676;
 }
 
 .content {
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  font-family: "Archivo", sans-serif;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: 15% 1fr 40%;
@@ -101,20 +107,32 @@ a {
   grid-area: 3/5/3/8;
 }
 
+#education {
+  grid-area: 3/8/3/10;
+}
+
 .page-titles {
   font-size: 16px;
   color: black;
 }
 
 #collab-title,
-#tech-title {
-  margin-left: 15%;
+#tech-title,
+#education-title {
+  margin-left: 10%;
 }
 
 li {
   font-size: 14px;
   letter-spacing: 1.68px;
-  margin-top: 5%;
+  margin-top: 3%;
+  line-height: 150%;
+}
+
+p {
+  font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 1.68px;
 }
 
 #collab-li {
@@ -123,4 +141,66 @@ li {
 
 #tech-li {
   margin-left: -20%;
+}
+
+.code-content{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 60vh;
+  box-shadow: 0px 5px 55px rgba(0, 0, 0, 0.50);
+}
+
+.code-projects{
+  display:flex;
+  justify-content: space-around;
+  align-items: center; 
+  width: 100%;
+  height: 60vh;
+  background-color: #EBF3FF;
+}
+
+.code-project-imgs{
+  width:25%;
+  cursor: pointer;
+  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.45);
+}
+
+.project-img{
+  width:100%;
+}
+
+.code-project-descriptions {
+  width: 40%;
+  height: 50vh;
+}
+
+
+.modal{
+  display: block; 
+  position: fixed; 
+  z-index: 1000; 
+  left: 0;
+  top: 0;
+  width: 100vw; 
+  height: 100vh; 
+  overflow: auto; 
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+.modal-content{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.exit-button{
+    background-color: transparent; 
+    color: white;               
+    border: none;                
+    font-size: 25px;             
+    cursor: pointer;             
+    margin-top:-39%;
+    margin-left:2%;
 }
